# metadata-processor

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  lgw.cfg  pyproject.toml  vscode.env
.github/workflows/: metadata-processor-ci.yml  metadata-processor-release.yml
mp/: __init__.py  app.py  lambda.py  lambda_apig.py  lambda_common.py  lambda_handler.py  lambda_s3.py
mp/io/: metadata_reader.py  metadata_tags.py  metadata_writer.py
mp/io/loader/: filesystem_loader.py  s3_loader.py
mp/io/writer/: __init__.py  connection_factory.py  exception_sql.py  exception_writer.py  formatter.py  metadata_formatter.py  metadata_sql.py  metadata_writer.py  sql.py
mp/model/: __init__.py  image_key.py  metadata.py  utils.py
mp/util/: objects.py  tools.py
tests/mp/: __init__.py  test_lambda_apig.py  test_lambda_common.py  test_lambda_handler.py  test_lambda_s3.py
tests/mp/io/: test_metadata_reader.py
tests/mp/io/loader/: test_filesystem_loader.py  test_s3_loader.py
tests/mp/io/writer/: mock_connection_factory.py  mock_exception_writer.py  mock_metadata_formatter.py  mock_metadata_writer.py  test_connection_factory.py  test_exception_writer.py  test_formatter.py  test_metadata_formatter.py  test_metadata_writer.py
tests/mp/model/: image_key_test.py  metadata_test.py  mock_metadata.py  test_metadata.py
tests/mp/util/: test_tools.py
