[tool.poetry]
name = "metadata-processor"
version = "0.0.1"
description = "Extracts metadata from an image and stores to database."
authors = ["Edward Q. Bridges <ebridges@roja.cc>"]

[tool.poetry.dependencies]
python = "^3.7"
pyexiv2 = "^2.3.1"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
commitizen = "^1.22.3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version","version.txt","metadata-processor/__init__.py:version"]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
