[tool.poetry]
name = "metadata-processor"
version = "1.1.0"
description = "Extracts metadata from an image and stores to database."
authors = ["Edward Q. Bridges <ebridges@roja.cc>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.5"
click = "^7.1.2"
sentry_sdk = "^0.16.5"
pillow = "^7.2.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
commitizen = "^1.22.3"
pytest = "^6.0.1"
black = "^19.10b0"
pytest-cov = "^2.10.0"
assertpy = "^1.1"
boto3 = "^1.14.43"
pytest-mock = "^3.3.0"
lgw = "^1.2.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version","version.txt","mp/__init__.py:version"]
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
# Using `--cov` causes breakpoints to be skipped when debugging.
# Workaround is to add `--no-cov` to `python.testing.pytestArgs` in workspace settings.
# https://github.com/kondratyev-nv/vscode-python-test-adapter/issues/123
addopts = ["--cov=./","--cov-report=xml","--cov-config=.coveragerc"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
